--- a/noname_M_1.0.0.0_Guide_En.ini
+++ b/noname_M_1.0.0.0_Guide_En.ini
@@ -1,5 +1,5 @@
 ; MIIIME Hybrid Launcher Configuration
-; ¨Ï MIIIME
+; â“’ MIIIME
 
 [Launch]
 ; Run as Administrator
@@ -134,7 +134,7 @@ AddCommand=
 ; Format: FilePath|FindString|ReplaceString
 ; Target: .txt, .xml, .cfg, etc. (Non-section structure)
 03={Run}\Config.xml|<WorkDir>C:\OldPath</WorkDir>|<WorkDir>{Run}</WorkDir>
-; ¡Ú Writing to {Dat} path is disabled in FreezeMode
+; Â¡Ãš Writing to {Dat} path is disabled in FreezeMode
 
 [UserAssets]
 ; Copy all file/folder structure from {Ast} to {Run} (Includes subdirectories)
@@ -172,4 +172,5 @@ AddCommand=
 ; Folder Icon
 FolderIcon={Res}\Folder.ico
 ; Splash Image
+
 Splash={Res}\Splash.png
