--- a/noname_M_1.0.0.0_Guide_Kr.ini
+++ b/noname_M_1.0.0.0_Guide_Kr.ini
@@ -1,41 +1,41 @@
 ; MIIIME Hybrid Launcher Configuration
-; ¨Ï MIIIME
+; â“’ MIIIME
 
 [Launch]
-; °ü¸®ÀÚ ±ÇÇÑÀ¸·Î ½ÇÇà
+; ê´€ë¦¬ìž ê¶Œí•œìœ¼ë¡œ ì‹¤í–‰
 RunAsAdmin=0
-; ·±Ã³ Ç¥½Ã ÀÌ¸§ (¸Þ½ÃÁö ¹Ú½º Á¦¸ñ µî)
+; ëŸ°ì²˜ í‘œì‹œ ì´ë¦„ (ë©”ì‹œì§€ ë°•ìŠ¤ ì œëª© ë“±)
 LauncherName=noname MIIIME Launcher
-; ³»ºÎÀûÀ¸·Î »ç¿ëÇÒ ¾Û ½Äº° ÀÌ¸§
+; ë‚´ë¶€ì ìœ¼ë¡œ ì‚¬ìš©í•  ì•± ì‹ë³„ ì´ë¦„
 AppName=noname
-; ½ÇÇàÇÒ ¿øº» ½ÇÇà ÆÄÀÏ¸í ({Run} Æú´õ ³»)
+; ì‹¤í–‰í•  ì›ë³¸ ì‹¤í–‰ íŒŒì¼ëª… ({Run} í´ë” ë‚´)
 ExeName=noname.exe
-; Áßº¹ ½ÇÇà ¹æÁö¿ë ¹ÂÅØ½º
+; ì¤‘ë³µ ì‹¤í–‰ ë°©ì§€ìš© ë®¤í…ìŠ¤
 UniqueMutex=noname_MIIIME_Mutex
-; Áßº¹ ½ÇÇà Çã¿ë ¿©ºÎ (1=Çã¿ë, 0=Â÷´Ü)
+; ì¤‘ë³µ ì‹¤í–‰ í—ˆìš© ì—¬ë¶€ (1=í—ˆìš©, 0=ì°¨ë‹¨)
 AllowMultipleInstances=1
-; ÀÛ¾÷ °æ·Î (ºñ¿öµÎ¸é {App} Æú´õ ±âº»°ª)
+; ìž‘ì—… ê²½ë¡œ (ë¹„ì›Œë‘ë©´ {App} í´ë” ê¸°ë³¸ê°’)
 WorkDir=
 
 [Directories]
-; ½ÇÇà ÆÄÀÏÀÌ À§Ä¡ÇÑ °æ·Î (»ó´ë °æ·Î)
+; ì‹¤í–‰ íŒŒì¼ì´ ìœ„ì¹˜í•œ ê²½ë¡œ (ìƒëŒ€ ê²½ë¡œ)
 RunPath=App\noname
-; »ç¿ëÀÚ µ¥ÀÌÅÍ ¿øº»(ÃÊ±â°ª) °æ·Î
+; ì‚¬ìš©ìž ë°ì´í„° ì›ë³¸(ì´ˆê¸°ê°’) ê²½ë¡œ
 RawDataPath=App\RawDat
-; »ç¿ëÀÚ ÆÄÀÏ °æ·Î
+; ì‚¬ìš©ìž íŒŒì¼ ê²½ë¡œ
 UserPath=App\Usr
-; »ç¿ëÀÚ µ¥ÀÌÅÍ°¡ ÀúÀåµÉ °æ·Î
+; ì‚¬ìš©ìž ë°ì´í„°ê°€ ì €ìž¥ë  ê²½ë¡œ
 DataPath=Dat
 
 [Environment]
-; --- [À¯Çü 1: ½Ã½ºÅÛ ¹× ÀÏ¹Ý º¯¼ö] ---
-; Çü½Ä: º¯¼ö¸í=°ª
-; ¸ñÀû: ½Ã½ºÅÛ PATH¸¦ È®ÀåÇÏ°Å³ª °øÅëÀ¸·Î »ç¿ëÇÒ °æ·Î º¯¼ö¸¦ ¼³Á¤ÇÔ.
+; --- [ìœ í˜• 1: ì‹œìŠ¤í…œ ë° ì¼ë°˜ ë³€ìˆ˜] ---
+; í˜•ì‹: ë³€ìˆ˜ëª…=ê°’
+; ëª©ì : ì‹œìŠ¤í…œ PATHë¥¼ í™•ìž¥í•˜ê±°ë‚˜ ê³µí†µìœ¼ë¡œ ì‚¬ìš©í•  ê²½ë¡œ ë³€ìˆ˜ë¥¼ ì„¤ì •í•¨.
 CommonFilesDir=..\CommonFiles
 PATH={CommonFiles}\Ghostscript\bin
 
-; --- [À¯Çü 2: ·±Å¸ÀÓ ¶óÀÌºê·¯¸® ¼³Á¤] ---
-; ¸ñÀû: Java, Ghostscript, Python µî ¿ÜºÎ ¶óÀÌºê·¯¸® ±¸µ¿À» À§ÇÑ ÇÊ¼ö È¯°æ º¯¼ö ¼³Á¤ÀÓ.
+; --- [ìœ í˜• 2: ëŸ°íƒ€ìž„ ë¼ì´ë¸ŒëŸ¬ë¦¬ ì„¤ì •] ---
+; ëª©ì : Java, Ghostscript, Python ë“± ì™¸ë¶€ ë¼ì´ë¸ŒëŸ¬ë¦¬ êµ¬ë™ì„ ìœ„í•œ í•„ìˆ˜ í™˜ê²½ ë³€ìˆ˜ ì„¤ì •ìž„.
 GS_LIB={CommonFiles}\Ghostscript\bin;{CommonFiles}\Ghostscript\lib;{CommonFiles}\Ghostscript\Resource;{CommonFiles}\Ghostscript\Resource\fonts
 GS_DLL={CommonFiles}\Ghostscript\bin\gsdll64.dll
 XNVIEW_GS_DLL={CommonFiles}\Ghostscript\bin\gsdll64.dll
@@ -45,15 +45,15 @@ _JAVA_OPTIONS="-Dfile.encoding=UTF-8"
 PYTHONPATH={Base}\Lib\site-packages
 NODE_PATH={CommonFiles}\nodejs\node_modules
 
-; --- [À¯Çü 3: Æ÷ÅÍºí °¡»ó º¯¼ö] ---
-; ¸ñÀû: Æ÷ÅÍºí ¾Û ³»ºÎ¿¡¼­ ÂüÁ¶ÇÒ »ç¿ëÀÚ Á¤ÀÇ º¯¼ö¸¦ ¼±¾ðÇÔ.
-; ¾Û ¼³Á¤¿¡¼­ Àý´ë °æ·Î(C:\...) ´ë½Å ÀÌ º¯¼ö(%MY_APP_ROOT%)¸¦ »ç¿ëÇÏ¸é °æ·Î ÀÇÁ¸¼ºÀ» Á¦°ÅÇÒ ¼ö ÀÖÀ½.
+; --- [ìœ í˜• 3: í¬í„°ë¸” ê°€ìƒ ë³€ìˆ˜] ---
+; ëª©ì : í¬í„°ë¸” ì•± ë‚´ë¶€ì—ì„œ ì°¸ì¡°í•  ì‚¬ìš©ìž ì •ì˜ ë³€ìˆ˜ë¥¼ ì„ ì–¸í•¨.
+; ì•± ì„¤ì •ì—ì„œ ì ˆëŒ€ ê²½ë¡œ(C:\...) ëŒ€ì‹  ì´ ë³€ìˆ˜(%MY_APP_ROOT%)ë¥¼ ì‚¬ìš©í•˜ë©´ ê²½ë¡œ ì˜ì¡´ì„±ì„ ì œê±°í•  ìˆ˜ ìžˆìŒ.
 MY_APP_ROOT={Run}
 MY_PLUGINS_DIR={Run}\Plugins
 MY_TEMP_DIR={Local}\Temp\MyApp
 
-; --- [À¯Çü 4: ³»ºÎ ¹× ½Ã½ºÅÛ °­Á¦ ¼³Á¤] ---
-; ¸ñÀû: ¾ð¾î(Locale), ÀÎÄÚµùÀ» °­Á¦ÇÏ°Å³ª ½Ã½ºÅÛ Temp °æ·Î¸¦ ¸®´ÙÀÌ·º¼ÇÇÔ.
+; --- [ìœ í˜• 4: ë‚´ë¶€ ë° ì‹œìŠ¤í…œ ê°•ì œ ì„¤ì •] ---
+; ëª©ì : ì–¸ì–´(Locale), ì¸ì½”ë”©ì„ ê°•ì œí•˜ê±°ë‚˜ ì‹œìŠ¤í…œ Temp ê²½ë¡œë¥¼ ë¦¬ë‹¤ì´ë ‰ì…˜í•¨.
 LANG=ko_KR.UTF-8
 LC_ALL=ko_KR.UTF-8
 TMP={Local}\Temp
@@ -61,48 +61,48 @@ TEMP={Local}\Temp
 APP_LOG_DIR={Dat}\{AppName}\Logs
 
 [Options]
-; 1=Á¤¼Ç ¸ðµå(½Éº¼¸¯ ¸µÅ©), 0=½º¿Ò ¸ðµå(¹°¸®Àû ÀÌµ¿)
+; 1=ì •ì…˜ ëª¨ë“œ(ì‹¬ë³¼ë¦­ ë§í¬), 0=ìŠ¤ì™‘ ëª¨ë“œ(ë¬¼ë¦¬ì  ì´ë™)
 UseJunction=1
-; 1=ÇÁ¸®Áî ¸ðµå(ÀÐ±â Àü¿ë, ÀúÀå ¾È ÇÔ), 0=ÀÏ¹Ý ¸ðµå
+; 1=í”„ë¦¬ì¦ˆ ëª¨ë“œ(ì½ê¸° ì „ìš©, ì €ìž¥ ì•ˆ í•¨), 0=ì¼ë°˜ ëª¨ë“œ
 FreezeMode=0
-; 0=²ô±â, 1=·Î±×ÆÄÀÏ »ý¼º
+; 0=ë„ê¸°, 1=ë¡œê·¸íŒŒì¼ ìƒì„±
 EnableLog=0
-; ½ÇÇà ½Ã Ãß°¡ÇÒ ¸í·É¾î ÀÎ¼ö
+; ì‹¤í–‰ ì‹œ ì¶”ê°€í•  ëª…ë ¹ì–´ ì¸ìˆ˜
 AddCommand=
 
 [ProcessWatch]
-; ¸ÞÀÎ ¾Û ¿Ü¿¡ °¨½ÃÇÒ Ãß°¡ ÇÁ·Î¼¼½º ¸ñ·Ï
-; [ÁÖÀÇ] ·±Ã³´Â ÀÚ½Ä ÇÁ·Î¼¼½º¸¦ ÀÚµ¿À¸·Î ÃßÀûÇÏÁö ¾ÊÀ½. º°µµ·Î ½ÇÇàµÇ´Â ÇÁ·Î¼¼½º´Â ¹Ýµå½Ã ¿©±â¿¡ µî·ÏÇØ¾ß Á¾·á ½Ã ÇÔ²² Á¤¸®µÊ.
+; ë©”ì¸ ì•± ì™¸ì— ê°ì‹œí•  ì¶”ê°€ í”„ë¡œì„¸ìŠ¤ ëª©ë¡
+; [ì£¼ì˜] ëŸ°ì²˜ëŠ” ìžì‹ í”„ë¡œì„¸ìŠ¤ë¥¼ ìžë™ìœ¼ë¡œ ì¶”ì í•˜ì§€ ì•ŠìŒ. ë³„ë„ë¡œ ì‹¤í–‰ë˜ëŠ” í”„ë¡œì„¸ìŠ¤ëŠ” ë°˜ë“œì‹œ ì—¬ê¸°ì— ë“±ë¡í•´ì•¼ ì¢…ë£Œ ì‹œ í•¨ê»˜ ì •ë¦¬ë¨.
 01=updater.exe
 02=noname64.exe
 
 [Registry]
-; ½ÇÁ¦ ÇÁ·Î±×·¥ÀÌ »ç¿ëÇÏ´Â ·¹Áö½ºÆ®¸® Å° (¹é¾÷ ¹× »èÁ¦ ´ë»ó)
+; ì‹¤ì œ í”„ë¡œê·¸ëž¨ì´ ì‚¬ìš©í•˜ëŠ” ë ˆì§€ìŠ¤íŠ¸ë¦¬ í‚¤ (ë°±ì—… ë° ì‚­ì œ ëŒ€ìƒ)
 01=HKEY_CURRENT_USER\SOFTWARE\VendorName\noname
 
 [RegistryRoot]
-; ÇÁ·Î±×·¥ Å° »èÁ¦ ÈÄ ºñ¾îÀÖÀ¸¸é Á¤¸®ÇÒ »óÀ§ Å°
-; ¸¸¾à VendorName ¾È¿¡ ´Ù¸¥ ¾Û Å°°¡ ³²¾ÆÀÖÀ¸¸é »èÁ¦µÇÁö ¾ÊÀ½.
+; í”„ë¡œê·¸ëž¨ í‚¤ ì‚­ì œ í›„ ë¹„ì–´ìžˆìœ¼ë©´ ì •ë¦¬í•  ìƒìœ„ í‚¤
+; ë§Œì•½ VendorName ì•ˆì— ë‹¤ë¥¸ ì•± í‚¤ê°€ ë‚¨ì•„ìžˆìœ¼ë©´ ì‚­ì œë˜ì§€ ì•ŠìŒ.
 01=HKEY_CURRENT_USER\SOFTWARE\VendorName
 
 [RegistryFix]
-; °æ·Î|ÀÌ¸§|°ª (Å¸ÀÔ ÀÚµ¿ °¨Áö, ¸ÅÅ©·Î »ç¿ë °¡´É)
+; ê²½ë¡œ|ì´ë¦„|ê°’ (íƒ€ìž… ìžë™ ê°ì§€, ë§¤í¬ë¡œ ì‚¬ìš© ê°€ëŠ¥)
 01=HKEY_CURRENT_USER\Software\noname|InstallPath|{Run}
 
 [RegistryShell]
-; --- [¹ü¿ë ½©(Shell) µî·Ï ¼½¼Ç] ---
-; Çü½Ä: ´ë»ó|½Äº°ID|¸Þ´ºÀÌ¸§|¸í·É¾î(Command)|¾ÆÀÌÄÜ°æ·Î(¼±ÅÃ»çÇ×)
+; --- [ë²”ìš© ì‰˜(Shell) ë“±ë¡ ì„¹ì…˜] ---
+; í˜•ì‹: ëŒ€ìƒ|ì‹ë³„ID|ë©”ë‰´ì´ë¦„|ëª…ë ¹ì–´(Command)|ì•„ì´ì½˜ê²½ë¡œ(ì„ íƒì‚¬í•­)
 ; -------------------------------------------------------------------------------------
-; 1. SystemTrayMenu ¿¹½Ã (Æú´õ ¿ìÅ¬¸¯ ¸Þ´º)
+; 1. SystemTrayMenu ì˜ˆì‹œ (í´ë” ìš°í´ë¦­ ë©”ë‰´)
 01=Directory|STM_Root|Set as Root Folder|"{Exe}" "%1"|"{Exe}"
-; 2. ÆÄÀÏ ¿¬°á ¿¹½Ã (¸ðµç ÆÄÀÏ ¿ìÅ¬¸¯ ¸Þ´º)
+; 2. íŒŒì¼ ì—°ê²° ì˜ˆì‹œ (ëª¨ë“  íŒŒì¼ ìš°í´ë¦­ ë©”ë‰´)
 02=*|MyLauncher_Open|Open with noname|"{Exe}" "%1"|"{Exe},0"
 
 [CleanupPath]
-; --- [È¸¼ö Àü Á¤Å© ÆÄÀÏ Á¤¸®] ---
-; µ¥ÀÌÅÍ È¸¼ö(ÀúÀå) Àü, È£½ºÆ®¿¡¼­ »èÁ¦ÇÒ °æ·ÎÀÓ.
-; ÀÌ °æ·ÎµéÀº Dat¿¡ ÀúÀåµÇÁö ¾Ê°í »èÁ¦µÊ.
-; ¿¹½Ã: Common Electron/Chromium Cache
+; --- [íšŒìˆ˜ ì „ ì •í¬ íŒŒì¼ ì •ë¦¬] ---
+; ë°ì´í„° íšŒìˆ˜(ì €ìž¥) ì „, í˜¸ìŠ¤íŠ¸ì—ì„œ ì‚­ì œí•  ê²½ë¡œìž„.
+; ì´ ê²½ë¡œë“¤ì€ Datì— ì €ìž¥ë˜ì§€ ì•Šê³  ì‚­ì œë¨.
+; ì˜ˆì‹œ: Common Electron/Chromium Cache
 01={Roaming}\noname\blob_storage
 02={Roaming}\noname\Cache
 03={Roaming}\noname\Code Cache
@@ -124,52 +124,53 @@ AddCommand=
 19={Local}\noname\CrashReports
 
 [FileWrite]
-; --- [À¯Çü 1: INI ±¸Á¶ ÆÄÀÏ (4´Ü ±¸¼º)] ---
-; Çü½Ä: ÆÄÀÏ°æ·Î|¼½¼Ç¸í|Å°ÀÌ¸§|¹Ù²Ü°ª
-; ÀåÁ¡: ¼½¼ÇÀÌ ¿©·¯ °³¿©µµ Á¤È®ÇÑ Å°¸¸ ¼öÁ¤ÇÏ¸ç, °æ·Î¿¡ °ø¹éÀÌ ÀÖ¾îµµ ¾ÈÀüÇÔ.
+; --- [ìœ í˜• 1: INI êµ¬ì¡° íŒŒì¼ (4ë‹¨ êµ¬ì„±)] ---
+; í˜•ì‹: íŒŒì¼ê²½ë¡œ|ì„¹ì…˜ëª…|í‚¤ì´ë¦„|ë°”ê¿€ê°’
+; ìž¥ì : ì„¹ì…˜ì´ ì—¬ëŸ¬ ê°œì—¬ë„ ì •í™•í•œ í‚¤ë§Œ ìˆ˜ì •í•˜ë©°, ê²½ë¡œì— ê³µë°±ì´ ìžˆì–´ë„ ì•ˆì „í•¨.
 01={Run}\Notepad4.ini|Settings|DefaultDirectory|{Run}
 02={Run}\noname.ini|ExtCodec\0000|Name|CoreAVC Video Decoder
 
-; --- [À¯Çü 2: ÀÏ¹Ý ÅØ½ºÆ® ÆÄÀÏ (3´Ü ±¸¼º)] ---
-; Çü½Ä: ÆÄÀÏ°æ·Î|Ã£À»¹®ÀÚ¿­|¹Ù²Ü¹®ÀÚ¿­
-; ´ë»ó: .txt, .xml, .cfg µî ¼½¼Ç ±¸Á¶°¡ ¾ø´Â ÀÏ¹Ý ÅØ½ºÆ® ÆÄÀÏ
+; --- [ìœ í˜• 2: ì¼ë°˜ í…ìŠ¤íŠ¸ íŒŒì¼ (3ë‹¨ êµ¬ì„±)] ---
+; í˜•ì‹: íŒŒì¼ê²½ë¡œ|ì°¾ì„ë¬¸ìžì—´|ë°”ê¿€ë¬¸ìžì—´
+; ëŒ€ìƒ: .txt, .xml, .cfg ë“± ì„¹ì…˜ êµ¬ì¡°ê°€ ì—†ëŠ” ì¼ë°˜ í…ìŠ¤íŠ¸ íŒŒì¼
 03={Run}\Config.xml|<WorkDir>C:\OldPath</WorkDir>|<WorkDir>{Run}</WorkDir>
-; ¡Ú FreezeMode¿¡¼­´Â {Dat} °æ·Î¿¡ ´ëÇÑ ¾²±â°¡ Â÷´ÜµÊ.
+; â˜… FreezeModeì—ì„œëŠ” {Dat} ê²½ë¡œì— ëŒ€í•œ ì“°ê¸°ê°€ ì°¨ë‹¨ë¨.
 
 [UserAssets]
-; {Ast}ÀÇ ¸ðµç Æú´õ/ÆÄÀÏ ±¸Á¶¸¦ {Run}À¸·Î º¹»ç (ÇÏÀ§ µð·ºÅä¸® Æ÷ÇÔ)
+; {Ast}ì˜ ëª¨ë“  í´ë”/íŒŒì¼ êµ¬ì¡°ë¥¼ {Run}ìœ¼ë¡œ ë³µì‚¬ (í•˜ìœ„ ë””ë ‰í† ë¦¬ í¬í•¨)
 01={Ast}\*|{Run}
-; {Ast}\Skins Æú´õ ÀüÃ¼¸¦ {Run}\Skins °æ·Î·Î º¹»ç
+; {Ast}\Skins í´ë” ì „ì²´ë¥¼ {Run}\Skins ê²½ë¡œë¡œ ë³µì‚¬
 02={Ast}\Skins|{Run}\Skins
-; {Ast}\Skins Æú´õ ¾ÈÀÇ ³»¿ë¹°¸¸ {Run}À¸·Î º¹»ç
+; {Ast}\Skins í´ë” ì•ˆì˜ ë‚´ìš©ë¬¼ë§Œ {Run}ìœ¼ë¡œ ë³µì‚¬
 03={Ast}\Skins|{Run}
 
 [UserExtras]
-; Ãß°¡ ÆÄÀÏ ÁÖÀÔ ¼³Á¤ (µå¶óÀÌ¹ö, DLL µî)
-; Çü½Ä: ¼Ò½º°æ·Î|¸ñÀûÁö°æ·Î|¹é¾÷¿©ºÎ(1=»ç¿ë, 0=¹Ì»ç¿ë)
-; {Ext}´Â App\Usr\Ext Æú´õ¸¦ °¡¸®Åµ´Ï´Ù.
-; [ÁÖÀÇ] ÀÌ ¿É¼ÇÀº °ü¸®ÀÚ ±â´ÉÀÌ ²¨Á® ÀÖÀ¸¸é ÀÛµ¿ÇÏÁö ¾ÊÀ» ¼ö ÀÖÀ½. ({System32}, {Windows} ÁÖÀÔ ½Ã ±ÇÇÑ ÇÊ¼ö)
+; ì¶”ê°€ íŒŒì¼ ì£¼ìž… ì„¤ì • (ë“œë¼ì´ë²„, DLL ë“±)
+; í˜•ì‹: ì†ŒìŠ¤ê²½ë¡œ|ëª©ì ì§€ê²½ë¡œ|ë°±ì—…ì—¬ë¶€(1=ì‚¬ìš©, 0=ë¯¸ì‚¬ìš©)
+; {Ext}ëŠ” App\Usr\Ext í´ë”ë¥¼ ê°€ë¦¬í‚µë‹ˆë‹¤.
+; [ì£¼ì˜] ì´ ì˜µì…˜ì€ ê´€ë¦¬ìž ê¸°ëŠ¥ì´ êº¼ì ¸ ìžˆìœ¼ë©´ ìž‘ë™í•˜ì§€ ì•Šì„ ìˆ˜ ìžˆìŒ. ({System32}, {Windows} ì£¼ìž… ì‹œ ê¶Œí•œ í•„ìˆ˜)
 ;
-; [»ç¿ë °¡´ÉÇÑ ¸ÅÅ©·Î]
-; {System32}     : C:\Windows\System32 (½Ã½ºÅÛ DLL, .cpl ÆÄÀÏ ÁÖÀÔ)
-; {Windows}      : C:\Windows (ini ¼³Á¤ ÆÄÀÏ(±¸Çü ÇÁ·Î±×·¥), ÆùÆ® µî)
-; {ProgramFiles} : C:\Program Files (ÇÃ·¯±×ÀÎ, °ø¿ë ¶óÀÌºê·¯¸® Æú´õ)
-; {Docs}         : ¹®¼­ Æú´õ (¶óÀÌ¼±½º Å°, ¼³Á¤ ÆÄÀÏÀÌ ¹®¼­ Æú´õ¿¡ ÇÊ¿äÇÑ °æ¿ì)
-; {UserProfile}  : »ç¿ëÀÚ ÇÁ·ÎÇÊ ·çÆ® (¿¹: C:\Users\Name, .°ø¿ë¼³Á¤ Æú´õ µî)
+; [ì‚¬ìš© ê°€ëŠ¥í•œ ë§¤í¬ë¡œ]
+; {System32}     : C:\Windows\System32 (ì‹œìŠ¤í…œ DLL, .cpl íŒŒì¼ ì£¼ìž…)
+; {Windows}      : C:\Windows (ini ì„¤ì • íŒŒì¼(êµ¬í˜• í”„ë¡œê·¸ëž¨), í°íŠ¸ ë“±)
+; {ProgramFiles} : C:\Program Files (í”ŒëŸ¬ê·¸ì¸, ê³µìš© ë¼ì´ë¸ŒëŸ¬ë¦¬ í´ë”)
+; {Docs}         : ë¬¸ì„œ í´ë” (ë¼ì´ì„ ìŠ¤ í‚¤, ì„¤ì • íŒŒì¼ì´ ë¬¸ì„œ í´ë”ì— í•„ìš”í•œ ê²½ìš°)
+; {UserProfile}  : ì‚¬ìš©ìž í”„ë¡œí•„ ë£¨íŠ¸ (ì˜ˆ: C:\Users\Name, .ê³µìš©ì„¤ì • í´ë” ë“±)
 ;
-; [!] 64ºñÆ® OS¿¡¼­ 32ºñÆ® ·±Ã³ »ç¿ë ½Ã ÁÖÀÇ:
-; System32(µå¶óÀÌ¹ö µî)¿¡ ÆÄÀÏÀ» ³Ö¾î¾ß ÇÑ´Ù¸é {System32} ´ë½Å ¹Ýµå½Ã {SysNative}¸¦ »ç¿ëÇØ¾ß ÇÔ.
-; {System32} »ç¿ë ½Ã SysWOW64·Î ¸®´ÙÀÌ·º¼Ç µÉ ¼ö ÀÖÀ½.
+; [!] 64ë¹„íŠ¸ OSì—ì„œ 32ë¹„íŠ¸ ëŸ°ì²˜ ì‚¬ìš© ì‹œ ì£¼ì˜:
+; System32(ë“œë¼ì´ë²„ ë“±)ì— íŒŒì¼ì„ ë„£ì–´ì•¼ í•œë‹¤ë©´ {System32} ëŒ€ì‹  ë°˜ë“œì‹œ {SysNative}ë¥¼ ì‚¬ìš©í•´ì•¼ í•¨.
+; {System32} ì‚¬ìš© ì‹œ SysWOW64ë¡œ ë¦¬ë‹¤ì´ë ‰ì…˜ ë  ìˆ˜ ìžˆìŒ.
 ; -------------------------------------------------------------------------------------
-; ¿¹½Ã 1: µå¶óÀÌ¹ö ÁÖÀÔ (°ü¸®ÀÚ ±ÇÇÑ ÇÊ¿ä)
+; ì˜ˆì‹œ 1: ë“œë¼ì´ë²„ ì£¼ìž… (ê´€ë¦¬ìž ê¶Œí•œ í•„ìš”)
 01={Ext}\Drivers\my_driver.sys|{SysNative}\drivers\my_driver.sys|1
-; ¿¹½Ã 2: DLL ÁÖÀÔ
+; ì˜ˆì‹œ 2: DLL ì£¼ìž…
 02={Ext}\Libs\special_lib.dll|{Windows}\special_lib.dll|0
-; ¿¹½Ã 3: ¹®¼­ Æú´õ¿¡ ¶óÀÌ¼±½º ÆÄÀÏ ÁÖÀÔ
+; ì˜ˆì‹œ 3: ë¬¸ì„œ í´ë”ì— ë¼ì´ì„ ìŠ¤ íŒŒì¼ ì£¼ìž…
 03={Ext}\Key.lic|{Docs}\MySoftware\Key.lic|1
 
 [UserResources]
-; Folder Icon / Æú´õ ¾ÆÀÌÄÜ ÁöÁ¤
+; Folder Icon / í´ë” ì•„ì´ì½˜ ì§€ì •
 FolderIcon={Res}\Folder.ico
-; Splash Image / ½ºÇÃ·¡½Ã ÀÌ¹ÌÁö ÁöÁ¤
+; Splash Image / ìŠ¤í”Œëž˜ì‹œ ì´ë¯¸ì§€ ì§€ì •
+
 Splash={Res}\Splash.png
