--- a/TargetApp_M/Ext/Adv_SysInjection/Adv_SysInjection.ini
+++ b/TargetApp_M/Ext/Adv_SysInjection/Adv_SysInjection.ini
@@ -21,7 +21,7 @@
 ; [EN] Format: SourceFile|DestinationPath|Backup(1=Yes, 0=No)
 ;
 ; Source: 플러그인 폴더 기준 상대 경로 (예: Drivers\my_driver.sys)
-; Macros: {System32}, {SysNative}, {Windows}, {Docs}
+; Macros: {System32}, {SysNative}(64비트 시스템 폴더), {Windows}, {Docs}
 
 ; Example 1: Inject Driver (관리자 권한 필요 / Admin Rights Required)
 ; (파일 위치: Ext\Adv_SysInjection\Drivers\my_driver.sys)
