--- a/TargetApp_M/Ext/Assets/Assets.ini
+++ b/TargetApp_M/Ext/Assets/Assets.ini
@@ -8,5 +8,10 @@ AssetsFolder=Ast
 [Assets]
 ; [KR] 형식: 소스(Ast기준 상대경로 또는 절대경로)|목적지
 ; 별도의 {Ast} 매크로 없이 파일명이나 폴더명만 적어도 동작합니다.
+
+; Ast 폴더 내의 모든 내용을 앱 폴더로 복사 (최초 실행 시에만 수행됨)
 01=*|{Run}
-;02=Skins|{Run}\Skins
+
+; 특정 테마나 플러그인 폴더만 선별적으로 주입
+02=Skins\*|{Run}\Skins
+03=Plugins\*.dll|{Run}\Plugins
