--- a/TargetApp_M/Ext/FileWrite/FileWrite.ini
+++ b/TargetApp_M/Ext/FileWrite/FileWrite.ini
@@ -11,15 +11,15 @@
 ;
 ; Macros: {Run}, {Dat}, {Base}
 
-; * 를 붙이면 해당 줄의 나머지 내용을 모두 선택합니다.
-01={Run}\Settings.ini|UserName=*|UserName=noname
+; 01: UserName 설정 (와일드카드 '*'는 해당 라인의 끝까지를 의미함)
+01={Run}\Settings.ini|UserName=*|UserName=%USERNAME%
 
-; 경로 수정 시에도 복잡한 정규식 없이 사용할 수 있습니다.
-02={Run}\config.ini|WorkDir=*|WorkDir={Run}\App\Bin
+; 02: 앱 내부의 작업 경로를 현재 런처의 실행 경로({Run})로 강제 고정 
+02={Run}\config.ini|WorkDir=*|WorkDir={Run}
 
-; Example: Config.xml 내부의 경로 수정
-03={Run}\Config.xml|<WorkDir>C:\OldPath</WorkDir>|<WorkDir>{Run}</WorkDir>
+; 03: XML 노드 내의 절대 경로를 매크로 경로로 치환 
+03={Run}\Config.xml|<Path>C:\OldPath</Path>|<Path>{Run}\Data</Path>
 
-; Example: 설정 파일 강제 패치
-04={Run}\Screen.cfg|FullScreen=0|FullScreen=1
-
+; 04: {Exe} 매크로를 사용하여 설정 파일 내에 현재 실행 파일의 위치를 주입 
+; 일부 앱은 설정 파일에 실행 파일의 절대 경로가 기록되어야 정상 작동합니다.
+04={Run}\startup.cfg|AppPath=*|AppPath="{Exe}"
