--- a/TargetApp_M/Ext/RegFix/RegFix.ini
+++ b/TargetApp_M/Ext/RegFix/RegFix.ini
@@ -1,18 +1,41 @@
-;	MIIIME Hybrid Launcher
-;	ⓒ 2026 MIIIME
-
-; [KR] RegFix 플러그인 설정
-; [EN] RegFix Plugin Configuration
-; 저장 인코딩: UTF-8
+;   MIIIME Hybrid Launcher - RegFix Configuration
+;   ⓒ 2026 MIIIME
+;   저장 인코딩: UTF-8 (한글 주석 유지를 위해 반드시 UTF-8로 저장하세요)
 
 [Fix]
-; [KR] 형식: 키경로|값이름|데이터|타입(REG_SZ, REG_DWORD 등)
-; [EN] Format: KeyPath|ValueName|ValueData|ValueType
+; =================================================================================================
+; [KR] 형식: 키경로|값이름|데이터|타입(선택)
+; [EN] Format: KeyPath|ValueName|ValueData|ValueType(Optional)
 ;
-; Macros: {Run}, {Exe}
+; 1. 키경로: HKEY_CURRENT_USER(HKCU) 또는 HKEY_LOCAL_MACHINE(HKLM)으로 시작하는 전체 경로 
+; 2. 값이름: 레지스트리 항목의 이름. 비워둘 경우(||) 해당 키의 '(기본값)'에 기록됩니다. 
+; 3. 데이터: 입력할 값. 아래의 매크로를 사용하여 경로를 동적으로 지정할 수 있습니다.
+; 4. 타입: REG_SZ(문자열), REG_DWORD(숫자), REG_EXPAND_SZ 등. 생략 시 REG_SZ가 기본값입니다. 
+;
+; [지원 매크로 (Macros)] 
+; {Exe} : 대상 프로그램의 실제 실행 파일 전체 경로
+; {Run} : 프로그램이 실행되는 폴더 경로 (App\TargetApp 등)
+; {Dat} : 데이터가 저장되는 폴더 경로 (Dat 등)
+; {Base}: 런처가 위치한 최상위 폴더 경로
+; {Roaming}, {Local}, {UserProfile} : 윈도우 시스템 환경 경로
+; =================================================================================================
 
-; Example: 설치 경로 강제 고정
-01=HKEY_CURRENT_USER\Software\VendorName\TargetApp|InstallPath|{Run}|REG_SZ
+; --- 예시 1: 일반적인 문자열 설정 (타입 생략 가능) ---
+; 프로그램의 설치 경로를 현재 실행 폴더({Run})로 강제 고정합니다.
+01=HKEY_CURRENT_USER\Software\MIIIME\TargetApp|InstallDir|{Run}
 
-; Example: 업데이트 체크 비활성화
-02=HKEY_CURRENT_USER\Software\VendorName\TargetApp|CheckUpdate|0|REG_DWORD
+; --- 예시 2: 숫자(DWORD) 값 설정 ---
+; 업데이트 체크를 비활성화(0) 하거나 특정 기능을 켭니다(1). 
+02=HKEY_CURRENT_USER\Software\MIIIME\TargetApp|AutoUpdate|0|REG_DWORD
+
+; --- 예시 3: 키의 '(기본값)' 데이터 설정 ---
+; 값이름을 비워두면(||) 해당 경로의 기본값이 수정됩니다. 
+03=HKEY_CURRENT_USER\Software\Classes\m-launcher||MIIIME Launcher Protocol
+
+; --- 예시 4: 복합 경로 및 시스템 매크로 활용 ---
+; 로그 저장 위치를 사용자 로밍(Roaming) 폴더 내의 특정 위치로 지정합니다.
+04=HKEY_CURRENT_USER\Software\MIIIME\TargetApp|LogPath|{Roaming}\MIIIME\Logs
+
+; --- 예시 5: 프로토콜 실행 명령어 등록 (GitHub Desktop 스타일) ---
+; 프로토콜 실행 시 현재 위치의 실행 파일({Exe})이 호출되도록 인자값과 함께 등록합니다.
+05=HKEY_CURRENT_USER\Software\Classes\m-launcher\shell\open\command||"{Exe}" "--url" "%1"
