--- a/TargetApp_M/Ext/RegShell/RegShell.ini
+++ b/TargetApp_M/Ext/RegShell/RegShell.ini
@@ -12,8 +12,12 @@
 ; Target: * (All files), Directory (Folders), Directory\Background (Folder BG), Drive, etc.
 ; Macros: {Exe}, {Run}, {Dat}, %1 (Selected File)
 
-; 1. SystemTrayMenu Example (폴더 우클릭 시)
+; 1. 폴더 우클릭 시 해당 폴더를 앱의 루트로 열기
 01=Directory|STM_Root|Set as Root Folder|"{Exe}" "%1"|"{Exe}"
 
-; 2. File Association Example (모든 파일 우클릭 시)
-02=*|MyLauncher_Open|Open with TargetApp|"{Exe}" "%1"|"{Exe},0"
+; 2. 폴더 배경(빈 공간) 우클릭 시 여기서 앱 실행
+02=Directory\Background|RunHereMIIIME|Run App Here|"{Exe}" "%V"|"{Exe}"
+
+; 3. 모든 파일(*) 우클릭 시 앱으로 강제 열기 (아이콘 인덱스 0번 사용)
+03=*|MyLauncher_Open|Open with TargetApp|"{Exe}" "%1"|"{Exe},0"
+
