--- a/TargetApp_M/Ext/FileWrite/FileWrite.ini
+++ b/TargetApp_M/Ext/FileWrite/FileWrite.ini
@@ -1,11 +1,16 @@
 ;	MIIIME Hybrid Launcher
-;	ⓒ 2026 MIIIME
+;	© 2026 MIIIME
 
 ; [KR] FileWrite 플러그인 설정
 ; [EN] FileWrite Plugin Configuration
 ; 저장 인코딩: UTF-8
 
-[Replace]
+[Settings]
+; SmartSkip=1 : 경로/PC가 바뀌지 않았다면 레지스트리 수정을 건너뜁니다. (권장)
+; SmartSkip=0 : 매번 강제로 레지스트리 값을 다시 씁니다.
+SmartSkip=1
+
+[FileWrite]
 ; [KR] 형식: 파일경로|찾을문자열|바꿀문자열
 ; [EN] Format: FilePath|FindString|ReplaceString
 ;
