--- a/TargetApp_M/Ext/RegFix/RegFix.ini
+++ b/TargetApp_M/Ext/RegFix/RegFix.ini
@@ -1,8 +1,13 @@
 ;   MIIIME Hybrid Launcher - RegFix Configuration
-;   ⓒ 2026 MIIIME
+;   © 2026 MIIIME
 ;   저장 인코딩: UTF-8 (한글 주석 유지를 위해 반드시 UTF-8로 저장하세요)
 
-[Fix]
+[Settings]
+; SmartSkip=1 : 경로/PC가 바뀌지 않았다면 레지스트리 수정을 건너뜁니다. (권장)
+; SmartSkip=0 : 매번 강제로 레지스트리 값을 다시 씁니다.
+SmartSkip=1
+
+[RegistryFix]
 ; =================================================================================================
 ; [KR] 형식: 키경로|값이름|데이터|타입(선택)
 ; [EN] Format: KeyPath|ValueName|ValueData|ValueType(Optional)
