--- a/TargetApp_M/Ext/Resources/Resources.ini
+++ b/TargetApp_M/Ext/Resources/Resources.ini
@@ -1,5 +1,5 @@
 ;	MIIIME Hybrid Launcher
-;	ⓒ 2026 MIIIME
+;	© 2026 MIIIME
 
 ; [KR] Resources 플러그인 설정
 ; [EN] Resources Plugin Configuration
@@ -8,7 +8,7 @@
 [Settings]
 ; [KR] 스플래시 이미지 표시 여부 (1=표시, 0=숨김)
 ; [EN] Show Splash Image (1=Show, 0=Hide)
-ShowSplash=1
+ShowSplash=0
 
 ; [KR] 폴더 아이콘 적용 여부 (1=적용, 0=미적용)
 ; [EN] Apply Folder Icon (1=Apply, 0=None)
