--- a/TargetApp_M/Src/TargetApp_M_Guide.ini
+++ b/TargetApp_M/Src/TargetApp_M_Guide.ini
@@ -1,5 +1,5 @@
 ; MIIIME Hybrid Launcher Configuration
-; ⓒ 2026 MIIIME
+; © 2026 MIIIME
 
 ; [KR] 본 설정 파일은 UTF-8 인코딩으로 저장되어야 합니다.
 ; [EN] This configuration file must be saved in UTF-8 encoding.
