--- a/TargetApp_M/Ext/Adv_UserProfile/Adv_UserProfile.ini
+++ b/TargetApp_M/Ext/Adv_UserProfile/Adv_UserProfile.ini
@@ -1,5 +1,5 @@
 ;	MIIIME Hybrid Launcher
-;	ⓒ 2026 MIIIME
+;	© 2026 MIIIME
 
 ; ########################################################################################
 ; [WARNING / 주의]
