--- a/TargetApp_M/Ext/Assets/Assets.ini
+++ b/TargetApp_M/Ext/Assets/Assets.ini
@@ -1,5 +1,10 @@
 ;	MIIIME Hybrid Launcher
-;	ⓒ 2026 MIIIME
+;	© 2026 MIIIME
+
+[Settings]
+; 0 = 최초 실행 시에만 에셋 주입 (권장, 빠름)
+; 1 = 매 실행 시마다 파일 변경 확인 및 덮어쓰기 (느림, 개발/테스트용)
+AlwaysUpdate=0
 
 [Folder]
 ; [KR] 자산 원본 폴더명 (상대 경로 입력 시 이 폴더를 기준으로 함)
@@ -13,5 +18,5 @@ AssetsFolder=Ast
 01=*|{Run}
 
 ; 특정 테마나 플러그인 폴더만 선별적으로 주입
-02=Skins\*|{Run}\Skins
-03=Plugins\*.dll|{Run}\Plugins
+;02=Skins\*|{Run}\Skins
+;03=Plugins\*.dll|{Run}\Plugins
